Use Math.clamp for the progress damping step